--- a/style.css
+++ b/style.css
@@ -32,20 +32,17 @@ body {
 }
 
 #restart {
-    display: flex;
+    display: grid;
     width: 100px;
     height: 40px;
-    position: relative;
+    place-items: center;
     margin-left: auto;
     margin-right: auto;
     opacity: 0;
 }
 
 #restartText {
-    display: flex;
-    width: 100px;
-    height: 40px;
-    font-size: 30px;
+    font-size: 12px;
 }
 
 .target {
